--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v1.0.2
+        
+      - name: BuildX list
+        run: docker buildx ls
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
