--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   push:
-    runs-on: ubuntu-latest
+    runs-on: arm32v7/ubuntu:20.04
     if: github.event_name == 'push'
 
     steps:
